# wikipedia-pageviews

./: .gitignore  README.md  fetcher.py  main.py  pyproject.toml
.github/workflows/: main.yml
tests/: test_csv_integrity.py  test_fetcher.py
